[gd_scene load_steps=3 format=3 uid="uid://vxk46hnnh0ba"]

[ext_resource type="Script" uid="uid://bm7n4c3m4s6kk" path="res://game/scripts/ui/options_panel.gd" id="1_rqjaq"]
[ext_resource type="PackedScene" uid="uid://xmhpn38awq6d" path="res://game/scenes/ui/menu_button.tscn" id="2_06jpv"]

[node name="options_panel" type="Panel"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 480.0
offset_bottom = 320.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rqjaq")

[node name="content" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="settings_list" type="VBoxContainer" parent="content"]
layout_mode = 2

[node name="title" type="Label" parent="content/settings_list"]
layout_mode = 2
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="master_volume" type="HBoxContainer" parent="content/settings_list"]
layout_mode = 2

[node name="setting_name" type="Label" parent="content/settings_list/master_volume"]
layout_mode = 2
size_flags_horizontal = 3
text = "Mastet Volume"
horizontal_alignment = 2

[node name="value_slider" type="HSlider" parent="content/settings_list/master_volume"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.01

[node name="music_volume" type="HBoxContainer" parent="content/settings_list"]
layout_mode = 2

[node name="setting_name" type="Label" parent="content/settings_list/music_volume"]
layout_mode = 2
size_flags_horizontal = 3
text = "Music Volume"
horizontal_alignment = 2

[node name="value_slider" type="HSlider" parent="content/settings_list/music_volume"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.01

[node name="sfx_volume" type="HBoxContainer" parent="content/settings_list"]
layout_mode = 2

[node name="setting_name" type="Label" parent="content/settings_list/sfx_volume"]
layout_mode = 2
size_flags_horizontal = 3
text = "SFX Volume"
horizontal_alignment = 2

[node name="value_slider" type="HSlider" parent="content/settings_list/sfx_volume"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.01

[node name="spacer" type="Control" parent="content/settings_list"]
layout_mode = 2
size_flags_vertical = 3

[node name="back_button" parent="content/settings_list" instance=ExtResource("2_06jpv")]
layout_mode = 2
text = "Back"

[connection signal="value_changed" from="content/settings_list/master_volume/value_slider" to="." method="_on_master_volume_value_slider_value_changed"]
[connection signal="value_changed" from="content/settings_list/music_volume/value_slider" to="." method="_on_music_volume_value_slider_value_changed"]
[connection signal="value_changed" from="content/settings_list/sfx_volume/value_slider" to="." method="_on_sfx_volume_value_slider_value_changed"]
[connection signal="pressed" from="content/settings_list/back_button" to="." method="_on_back_button_pressed"]
